# simple-benchmark

./: .gitignore  README.md  benchmark.py  benchmark_config.yaml  config_validation.py  pyproject.toml  runner.py  webserver.py
benchmarks/: reference.py  team02.py  utils.py
config/: benchmark.yaml
db/: database.py  migrations.sql
src/: benchmark.py  config.py  exceptions.py  execution.py  reference.py  team01.py  team02.py  team03.py  utils.py  validation.py  webserver.py
src/benchmark/: class_benchmark.py  config.py  core.py  function_benchmark.py
static/: styles.css
templates/: admin.html  archived_partial.html  benchmark_details_partial.html  benchmark_result.html  error.html  export_benchmark.html  frozen.html  index.html  leaderboard.html  leaderboard_partial.html  rankings_partial.html  sandbox_partial.html  sandbox_result.html
