[tool.poetry]
name = "simple-benchmark"
version = "0.1.0"
description = ""
authors = ["Alberto Spina <alberto.spina.1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
